#ifndef ACOMMAND_HPP
#define ACOMMAND_HPP

#include "Utils.hpp"
#include "Server.hpp"
#include "Client.hpp"
//#include "Message.hpp"

class Server;
class Client;
class Message;

class ACommand
{
	private:

	public:
		ACommand();
		virtual ~ACommand() {}

		//virtual void execute(Server& server, Client& client, const Message& msg) = 0;
};

#endif